# django-spam

./: .flake8  .gitignore  .travis.yml  AUTHORS  LICENSE  README.md  README.rst  django_spam  pyproject.toml  runtests.py  setup.py
.circleci/: config.yml
.github/workflows/: main.yml
demo/: README.md  manage.py  pyproject.toml  requirements.pip
demo/demo/: settings.py  urls.py
demo/django_spam/: utils.py
dj_spam/: __init__.py  tests.py  urls.py  utils.py  views.py
django_spam/: __init__.py  apps.py  enums.py  tests.py  urls.py  utils.py  views.py
django_spam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: settings.py  test_enums.py  test_settings.py  test_spam.py  test_utils.py  tests.py  urls.py
