
[tool.poetry]
name = "django-spam demo"
version = "1.0.0"
description = "A demo using django-spam."
authors = ["nick.kelly@tivix.com"]

[tool.poetry.dependencies]
python = "3.9"
django = "^3.0"
django_spam = { path = "../", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
